<resources>
    <string name="app_name">WeeklyPlan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting">Setting</string>
    <string name="databases">The History Plan List</string>
    <string name="analysis_plan">Analysis on schedule</string>
    <string name="tag_lib">Tags</string>
    <string name="role_lib">Roles</string>
    <string name="trash">Trash</string>
    <string name="planthing_schedule">Planthing Schedule</string>
    <string name="plan_chart">Planthing Analyse Chart</string>


    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="write_planthing_info">You can write a plan for your later time,come on!</string>
    <string name="update_planthing_info">You can update your planthing,but you can\'t change your plan time!</string>
    <string name="plan_name">Plan Name :</string>
    <string name="plan_desc">Plan Description : </string>
    <string name="plan_time">Plan Time : </string>
    <string name="plan_date">Plan Date : </string>
    <string name="is_remind">Is Remind : </string>
    <string name="commit">Commit</string>
    <string name="plan_level">Plan Level : </string>
    <string name="plan_role">Plan Role : </string>
    <string name="plan_Tag">Plan Tag : </string>
    <string name="select_time">Select Plan Time</string>
    <string name="select_date">Select Plan Date</string>
    <string name="select_time_for_but">From : %1$s  To : %2$s</string>
    <string name="select_date_for_but">From : %1$s  To : %2$s</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_content">Won\'t be able to recover this file!</string>
    <string name="confirm_delete">yes, delete it</string>

    <string name="deleted">delete!</string>
    <string name="deleted_content">Your plan is deleted!</string>
    <string name="ok">OK</string>

    <string name="notification_ticker">WeeklyPlan remind you have Plan to do.</string>
    <string name="notification_toast">WeeklyPlan remind you have Plan to do.</string>

    <string name="set_notification_success">Set Notification Successful.</string>

    <string name="cancel_notification_success">Cancel Notification Successful.</string>


    <string name="event_title">Plan : %1$s \nPlan description: %2$s</string>
    <string name="today">Today</string>
    <string name="day_view">DayView</string>
    <string name="three_day_view">ThreeDayView</string>

    <string-array name="week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>


    <string-array name="dropdown_level">
        <item>important and emergency</item>
        <item>normal</item>
        <item>info</item>
        <item>didnssdasd</item>
    </string-array>

    <array name="bootstrap_dropdown_example_data">
        <item>First item</item>
        <item>Second item</item>
        <item>{dropdown_disabled}Disabled item</item>
        <item>{dropdown_header}Dropdown header</item>
        <item>Fourth item</item>
        <item>Fifth item</item>
        <item>{dropdown_separator}</item>
        <item>Separated item</item>
    </array>
</resources>
