<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_current" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/planthing_schedule" />
        <item android:id="@+id/nav_trash" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/trash" />
        <item android:id="@+id/nav_role" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/role_lib" />
        <item android:id="@+id/nav_tag" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tag_lib" />
        <item android:id="@+id/plan_chart" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/plan_chart" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item android:id="@+id/nav_setting" android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>