<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:bootstrapSize="xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/write_planthing_info"
            />
    </com.beardedhen.androidbootstrap.BootstrapWell>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_name"/>

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/planthing_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:bootstrapSize="md"
                    app:bootstrapBrand="info"/>

            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_desc"/>

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/planthing_desc"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    app:bootstrapSize="md"
                    app:bootstrapBrand="info"/>

            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_time"/>
                <com.beardedhen.androidbootstrap.BootstrapButtonGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bootstrapBrand="info"
                    android:orientation="horizontal"
                    >

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/pick_time_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_time"
                    app:bootstrapSize="md"
                    app:buttonMode="regular"
                    app:showOutline="false"
                    app:roundedCorners="false"
                    />
                </com.beardedhen.androidbootstrap.BootstrapButtonGroup>
            </TableRow>


            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_date"/>
                <com.beardedhen.androidbootstrap.BootstrapButtonGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bootstrapBrand="info"
                    android:orientation="horizontal"
                    >

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/pick_date_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date"
                    app:bootstrapSize="md"
                    app:buttonMode="regular"
                    app:showOutline="false"
                    app:roundedCorners="false"
                    />
                </com.beardedhen.androidbootstrap.BootstrapButtonGroup>
            </TableRow>


            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_remind"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flag_remind"
                        />

                </LinearLayout>






            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_level"/>

                <Spinner
                    android:id="@+id/plan_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_role"/>

                <Spinner
                    android:id="@+id/plan_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </TableRow>


            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_Tag"/>
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                <GridLayout
                    android:id="@+id/grid_layout"
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:columnCount="5">
                </GridLayout>

                </HorizontalScrollView>



            </TableRow>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_marginTop="40dp"
                android:id="@+id/write_plan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="false"
                />


            <!--<com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_marginTop="40dp"
                android:id="@+id/send_notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send notification"
                app:bootstrapBrand="primary"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="false"
                />-->

        </TableLayout>




    </ScrollView>

</LinearLayout>